--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,12 @@ tag_map:
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
 
+archive_generator:
+  per_page: 0  
+  yearly: false
+  monthly: false
+  daily: false
+
 # Pagination
 ## Set per_page to 0 to disable pagination
 per_page: 10
@@ -63,7 +69,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: tranquilpeak
+theme: icarus
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
